data/derived/comb/progs/unify/prog1930.ml.out
Characters 141-174:
  if y = 2 then buildSine( build(rand, depth-1) );;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
